fix(multiple): remove webkit-overflow-scrolling
This is a non-standard CSS property that only works on mobile Safari and
may cause inconsistent behavior by introducing a new stacking context.
Users who want this behavior can add the property themselves, but we
shouldn't specify it by default.

fixes #19374

--- a/src/material/core/style/_menu-common.scss
+++ b/src/material/core/style/_menu-common.scss
@@ -18,7 +18,6 @@ $icon-margin: 16px !default;
   min-width: $overlay-min-width;
   max-width: $overlay-max-width;
   overflow: auto;
-  -webkit-overflow-scrolling: touch;   // for momentum scroll on mobile
 }
 
 @mixin item-base() {
